<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bill_base_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="right"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".BillActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:orientation="vertical"
                    android:weightSum="1" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:padding="10dp"
                        android:text="@string/Account_Name"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:padding="10dp"
                        android:text="@string/Balance"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:padding="10dp"
                        android:text="@string/billno"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:padding="10dp"
                        android:text="@string/bill_name"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_weight="0.2"
                        android:padding="10dp"
                        android:text="@string/billamount"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_weight="0.2"
                        android:padding="10dp"
                        android:text="@string/duedate"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:padding="10dp"
                        android:text="@string/lastdatebill"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:padding="10dp"
                        android:text="@string/reminder"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:orientation="vertical"
                    android:weightSum="1" >

                    <TextView
                        android:id="@+id/billaccnm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:padding="10dp"
                        android:text="Large Text"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/b_balance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="Medium Text"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/billno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoText="true"
                        android:ems="10"
                        android:inputType="number"
                        android:nextFocusUp="@id/billno"
                        android:padding="10dp" >

                        <requestFocus />
                    </EditText>

                    <EditText
                        android:id="@+id/billname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="text"
                        android:padding="10dp" />

                    <EditText
                        android:id="@+id/billamount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal" />

                    <EditText
                        android:id="@+id/duedate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:ems="10"
                        android:padding="10dp" />

                    <EditText
                        android:id="@+id/lastdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="date"
                        android:padding="10dp" />

                    <ToggleButton
                        android:id="@+id/reminder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="24dp"
                        android:minWidth="15dp"
                        android:padding="10dp"
                        android:text="ToggleButton" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/remindertimelayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:weightSum="1" >

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="0.5"
                    android:gravity="right"
                    android:padding="10dp"
                    android:text="Time:"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/remindersettimebutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="Set Time" />
            </LinearLayout>

            <Button
                android:id="@+id/billsubmit"
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/button_bg"
                android:height="70dp"
                android:minHeight="70dp"
                android:text="@string/savebill"
                android:textColor="#FFFFFF"
                android:width="200dp" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>